--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,18 @@ std = []
 std-lock = ["std"]
 
 async-lock = ["dep:async-lock", "dep:pin-project-lite", "async"]
+tokio = ["dep:tokio", "async"]
+async-std = ["dep:async-std", "async"]
 
 [dependencies]
-async-lock = { version = "2", optional = true }
 parking_lot = { version = "0.12", optional = true }
 spin = { version = "0.9", default-features = false, features = [
     "mutex",
     "spin_mutex",
     "rwlock",
 ], optional = true }
+
+async-lock = { version = "2", optional = true }
 pin-project-lite = { version = "0.2", optional = true }
+tokio = { version = "1", features = ["sync"], optional = true }
+async-std = { version = "1", optional = true }
